[metadata]
name = jsonfind
version = attr: jsonfind._version.VERSION
url = https://github.com/wtnb75/jsonfind
author = Takashi WATANABE
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = search dict
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  jsonfind=jsonfind._cli:cli
